fdo#45908: Cleaning up the tabs too early can cause loops